--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     <div id="main">
         <center>
             <h3>
-                <li><a href="https://fullz.sh/breach" target="_blank">Breach</a></li>
-                <li><a href="https://fullz.sh/flood" target="_blank">Flood</a></li>
-                <li><a href="https://fullz.sh/vice" target="_blank">Vice</a></li>
-                <li><a href="https://fullz.sh/lies" target="_blank">Lies</a></li>
-                <li><a href="https://fullz.sh/slit" target="_blank">Slit</a></li>
-                <li><a href="https://fullz.sh/beaten" target="_blank">Beaten</a></li>
-                <li><a href="https://fullz.sh/revv" target="_blank">Revv</a></li>
-                <li><a href="https://fullz.sh/hells" target="_blank">Hells</a></li>
-                <li><a href="https://fullz.sh/wenaki" target="_blank">Wenaki</a></li>
-                <li><a href="https://fullz.sh/prophet" target="_blank">Prophet</a></li>
-                <li><a href="https://fullz.sh/restrict" target="_blank">Restrict</a></li>
+                <a href="https://fullz.sh/breach" target="_blank">Breach</a>
+                <a href="https://fullz.sh/flood" target="_blank">Flood</a>
+                <a href="https://fullz.sh/vice" target="_blank">Vice</a>
+                <a href="https://fullz.sh/lies" target="_blank">Lies</a>
+                <a href="https://fullz.sh/slit" target="_blank">Slit</a>
+                <a href="https://fullz.sh/beaten" target="_blank">Beaten</a>
+                <a href="https://fullz.sh/revv" target="_blank">Revv</a>
+                <a href="https://fullz.sh/hells" target="_blank">Hells</a>
+                <a href="https://fullz.sh/wenaki" target="_blank">Wenaki</a>
+                <a href="https://fullz.sh/prophet" target="_blank">Prophet</a>
+                <a href="https://fullz.sh/restrict" target="_blank">Restrict</a>
             </h3>
         </center>
     </div>
