--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     <div id="main">
         <center>
             <h3>
-                <a href="https://fullz.sh/breach" target="_blank">Breach</a><br>
-                <a href="https://fullz.sh/flood" target="_blank">Flood</a><br>
-                <a href="https://fullz.sh/vice" target="_blank">Vice</a><br>
-                <a href="https://fullz.sh/lies" target="_blank">Lies</a><br>
-                <a href="https://fullz.sh/slit" target="_blank">Slit</a><br>
-                <a href="https://fullz.sh/beaten" target="_blank">Beaten</a><br>
-                <a href="https://fullz.sh/revv" target="_blank">Revv</a><br>
-                <a href="https://fullz.sh/hells" target="_blank">Hells</a><br>
-                <a href="https://fullz.sh/wenaki" target="_blank">Wenaki</a><br>
-                <a href="https://fullz.sh/prophet" target="_blank">Prophet</a><br>
-                <a href="https://fullz.sh/restrict" target="_blank">Restrict</a><br>
+                <a href="https://discord.com/users/1104424244454101055" target="_blank">Breach</a><br>
+                <a href="https://discord.com/users/1233471131022004308" target="_blank">Flood</a><br>
+                <a href="https://discord.com/users/1101636419409149953" target="_blank">Vice</a><br>
+                <a href="https://discord.com/users/1210960461911302274" target="_blank">Lies</a><br>
+                <a href="https://discord.com/users/1205195317570572392" target="_blank">Slit</a><br>
+                <a href="https://discord.com/users/1236185316877144147" target="_blank">arrival</a><br>
+                <a href="https://discord.com/users/1111353185731366933" target="_blank">Revv</a><br>
+                <a href="https://discord.com/users/1251277471878348902" target="_blank">Hells</a><br>
+                <a href="https://discord.com/users/1129752085898985503" target="_blank">Wenaki</a><br>
+                <a href="https://discord.com/users/945976555375587328" target="_blank">Prophet</a><br>
+                <a href="https://discord.com/users/983355264021463120" target="_blank">Restrict</a><br>
             </h3>
         </center>
     </div>
