--- a/tabby.html
+++ b/tabby.html
@@ -1,42 +1,60 @@
-<!DOCTYPE html>
-<!-- made by cevenge XD LOL !-->
-
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta content="🎈" property="og:title">
-    <meta content="" property="og:description">
-    <meta content="https://cdn.discordapp.com/emojis/1222120272170188820.webp?size=96&quality=lossless" property="og:image">
-    <meta content="#36393e" data-react-helmet="true" name="theme-color">
-    <meta content="tabby ^_^" name="description">
-    <title>tabby</title>
-    <link href="hhttps://cdn.discordapp.com/emojis/1222120272170188820.webp?size=96&quality=lossless" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="css/tabby.css">
+    <title>&gt;_&lt;</title>
+    <link rel="stylesheet" href="css/ghost.css">
+    <script src="js/java.js"></script>
+    <script src="js/sparkle.js"></script>
+    <script src="js/disable_inspect.js"></script>
 </head>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1101800965289545790/1250831937493401610/image.png?ex=666c5f85&is=666b0e05&hm=98456d26d45bd46a106b494fc31d270386fc82dd8c7b76c377637aaec6700cc6&'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
-<div id="clickToEnter" onclick="audio.play();video.play()">
-    [Click Anywhere xD :3]
-</div>
-<audio src="media/1.mp3" loop id="audio" onplay="audio.volume = 0.1"></audio>
-<video src="media/1.mp3" loop muted style="filter: grayscale(100%) sepia(100%) hue-rotate(150deg); pointer-events: none; position: absolute; top: 0; left: 0; width: 100vw; height: 100vh; object-fit: cover" id="video"></video>
-<div id="snow" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></div>
-<div style="position: absolute; background: rgba(0, 0, 0, 0.01); top: 0; left: 0; width: 100vw; height: 100vh"></div>
-<main>
-    <div class="content">
-        <img class="profile-picture" alt="ICON" src="https://cdn.discordapp.com/attachments/1247874842989170689/1247879861666709554/IMG_3731_polarr.webp?ex=666c2e2f&is=666adcaf&hm=ae5a8c7e7d89ec3b5713391838498882d8840f0e281af7b0e2bad7045bf46ab6&" style="margin-bottom: 1em"/>
-        <h1 style="font-family: mc; font-size: 60px; margin-bottom: 0; padding-bottom: 0; color: rgb(0, 0, 0);" class="glow">tabby</h1>
-        <span id="typedOut" class="glow" style="font-family: 'mc'; color: rgb(0, 0, 0); height: 20px"></span>
-        <center>
-            <h3>
-                <a href="https://discord.com/users/1236185316877144147" target="_blank" class="socialicon"> <discord></discord> </a>
-            </h3>
-        </center>   
+<body>
+  <header>
+      <pre class="ascii-text">                                      
+
+__        _______ _   _    _    _  _____ 
+\ \      / / ____| \ | |  / \  | |/ /_ _|
+ \ \ /\ / /|  _| |  \| | / _ \ | ' / | | 
+  \ V  V / | |___| |\  |/ ___ \| . \ | | 
+         \_/\_/  |_____|_| \_/_/   \_\_|\_\___|       
+                                   
+  
+ </pre>
+  </header>
+  <div class="container"> 
+    <div class="ghost">
+      <img src="images/a_a4de877d06a810893a9b4c41644c5ad3.gif" alt="ghost">
     </div>
-</main>
-<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="js/tabby.js"></script>
-<script src="js/tabby1.js"></script>
-</body>
-</html>
+       <div class="">
+           
+ <div class="center">
+   <div class="overlay" id="overlay">
+        <div class="proceed-button" onclick="removeOverlay(); playMusic()"><p style="font-family: 'MC'; color: white; font-size: 45px;">click</p></div>
+    </div>
+    <style>
+      @font-face {
+        font-family: 'MC';
+        src: url('fonts/MC.otf') format('opentype');
+      }
+    </style>
+    <script>
+        function removeOverlay() {
+            var overlay = document.getElementById("overlay");
+            overlay.style.display = "none";
+        }
+
+        function playMusic() {
+            var audio = new Audio("https://files.catbox.moe/3z8i0o.mp3");
+            audio.play();
+        }
+    </script>      
+
+    <div>
+          <a class="socials-icon" href="https://discordapp.com/users/1129752085898985503" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#ffff" class="socials-icon" viewBox="0 0 16 16">
+              <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path>
+            </svg>    </a></div><a class="socials-icon" href="https://discordapp.com/users/1129752085898985503" target="_blank">
+  </a></div><a class="socials-icon" href="https://discordapp.com/users/1129752085898985503" target="_blank">
+
+
+
+</a></div></div></body></html>
