--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a href="https://minors.lol/vice" target="_blank">Vice</a><br>
                 <a href="https://minors.lol/tabby" target="_blank">Tabby</a><br>
                 <a href="https://minors.lol/uke" target="_blank">Uke</a><br>
+                <a href="https://minors.lol/lack" target="_blank">Lack</a><br>
             </h3>
         </center>
     </div>
