--- a/uke.html
+++ b/uke.html
@@ -24,7 +24,7 @@
     </header>
     <div class="container">
         <div class="ghost">
-            <img src="images/IMG_4430.jpg" alt="ghost">
+            <img src="https://cdn.discordapp.com/attachments/1255840565606481962/1255925793159381092/IMG_4430.jpg?ex=667ee78b&is=667d960b&hm=649284ccc104c65f24bdb89fc74e5c9738e9e82aeadf7fb4f08bd61117ecae51&" alt="ghost">
         </div>
         <div class="">
 
