--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="Minors.lol" property="og:title">
-    <meta content="Hi sons" property="og:description">
+    <meta content="#minors" property="og:description">
     <link href="css/anim.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/vile.css">
