--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="main">
         <center>
             <h3>
-                <a href="https://minors.lol/vice" target="_blank">Vice</a><br>
+                <a href="https://minors.lol/vice" target="_blank">Vice ##FEDDED</a><br>
                 <a href="https://minors.lol/tabby" target="_blank">Tabby</a><br>
                 <a href="https://minors.lol/uke" target="_blank">Uke</a><br>
                 <a href="https://minors.lol/lack" target="_blank">Lack</a><br>
